# libtld

./: .gitignore  CMakeLists.txt  INSTALL.txt  LICENSE.txt  README.md  TODO.md  mk
cmake/: CMakeLists.txt  LibTLDConfig.cmake
conf/: CMakeLists.txt
conf/tlds/: README.md  groups.ini  international.ini  languages.ini  professionals.ini  region.ini  regions.ini  technical.ini
conf/tlds/commercial-tlds/: aero.ini  amazon.ini  apis-networks.ini  appwrite.ini  aquapal.ini  arcancloud.ini  avm.ini  besties.ini  block.ini  brands.ini  brave.ini  brendly.ini  bubble.ini  canva.ini  cdn77.ini  clevercloud.ini  cloud66.ini  cloudbees.ini  cloudfkare.ini  cloudns.ini  cloudscake.ini  codesandbox.ini  cognition-ai.ini  commercial.ini  contentful.ini  convex.ini  craft-docs.ini  crisp-im.ini  cyber-folks.ini  dark.ini  deno-land.ini  dfinity-foundation.ini  dhosting.ini  digitalplat.ini  dreamyoungs.ini  eastwp.ini  electromagnetic-field.ini  elefunc.ini  encoretivity.ini  evervault.ini  (+119 more)
conf/tlds/country-tlds/: ac.ini  ad.ini  ae.ini  af.ini  ag.ini  ai.ini  al.ini  am.ini  an.ini  ao.ini  aq.ini  ar.ini  as.ini  at.ini  au.ini  aw.ini  ax.ini  az.ini  ba.ini  bb.ini  bd.ini  be.ini  bf.ini  bg.ini  bh.ini  bi.ini  bj.ini  bm.ini  bn.ini  bo.ini  bq.ini  br.ini  bs.ini  bt.ini  bv.ini  bw.ini  by.ini  bz.ini  ca.ini  cc.ini  (+212 more)
conf/tlds/entrepreneurial/: commercial.ini
contrib/: suppressions.txt
debian/: README.Debian  README.source  changelog  control  copyright  libtld-compiler.install  libtld-compiler.links  libtld-compiler.postinst  libtld-dev.install  libtld-doc.install  libtld-doc.links  libtld.install
dev/: build  build-package  build-src  coverage  index.php  libtld-only-CMakeLists.txt
doc/: CMakeLists.txt  example.c  libtld.doxy.in
doc/man/: CMakeLists.txt  tld.3  tld.ini.5  tldc.1
include/: CMakeLists.txt
include/libtld/: tld.h.in
libtld/: CMakeLists.txt  tld.c  tld.cpp  tld.h.in  tld_compiler.cpp  tld_compiler.h  tld_data.h  tld_data.xml  tld_domain_to_lowercase.c  tld_emails.cpp  tld_file.cpp  tld_file.h  tld_object.cpp  tld_parser.cpp  tld_strings.c
package/: CMakeLists.txt  control.development.in  control.documentation.in  control.runtime.in
php/: INSTALL  build  php_libtld.c  php_libtld.php
src/: .gitignore  CMakeLists.txt  tld.c  tld_data.h  tld_data.xml  tld_domain_to_lowercase.c  tld_emails.cpp  tld_object.cpp  tld_parser.cpp  validate_tld.cpp
tests/: CMakeLists.txt  godaddy-tlds.txt  hex.c  iwantmyname-tlds.txt  run_all_tests.sh  tld_internal_test.c  tld_internal_test.cpp  tld_test.c  tld_test_domain_lowercase.c  tld_test_emails.cpp  tld_test_full_uri.c  tld_test_godaddy.sh  tld_test_object.cpp  tld_test_tld_names.cpp  tld_test_validate.sh  tld_test_versions.c  tld_test_xml.sh
tools/: CMakeLists.txt  extract_tld.cpp  tldc.cpp  validate_tld.cpp
